# Assignment-2

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
regression/: __init__.py  logreg.py
test/: test_logreg.py
